# api/swagger.yaml
@@ -1196,6 +1196,117 @@ definitions:
     required:
     - updated_by
     type: object
+  opportunity_campaigns.Create:
+    properties:
+      campaign_id:
+        description: 行銷活動ID
+        type: string
+      created_by:
+        description: 創建者
+        type: string
+      opportunity_id:
+        description: 商機ID
+        type: string
+    required:
+    - campaign_id
+    - created_by
+    - opportunity_id
+    type: object
+  opportunity_campaigns.List:
+    properties:
+      limit:
+        description: 筆數(請從1開始帶入,最高上限20)
+        type: integer
+      opportunity_campaigns:
+        description: 多筆
+        items:
+          properties:
+            activated_at:
+              description: 啟用時間
+              type: string
+            campaign_id:
+              description: 行銷活動ID
+              type: string
+            created_at:
+              description: 創建時間
+              type: string
+            created_by:
+              description: 創建者
+              type: string
+            deleted_at:
+              description: 刪除時間
+              type: string
+            opportunity_campaign_id:
+              description: 商機行銷活動ID
+              type: string
+            opportunity_id:
+              description: 商機ID
+              type: string
+            updated_at:
+              description: 更新時間
+              type: string
+            updated_by:
+              description: 更新者
+              type: string
+          type: object
+        type: array
+      page:
+        description: 頁數(請從1開始帶入)
+        type: integer
+      pages:
+        description: 總頁數
+        type: integer
+      total:
+        description: 總筆數
+        type: integer
+    required:
+    - limit
+    - page
+    type: object
+  opportunity_campaigns.Single:
+    properties:
+      activated_at:
+        description: 啟用時間
+        type: string
+      campaign_id:
+        description: 行銷活動ID
+        type: string
+      created_at:
+        description: 創建時間
+        type: string
+      created_by:
+        description: 創建者
+        type: string
+      deleted_at:
+        description: 刪除時間
+        type: string
+      opportunity_campaign_id:
+        description: 商機行銷活動ID
+        type: string
+      opportunity_id:
+        description: 商機ID
+        type: string
+      updated_at:
+        description: 更新時間
+        type: string
+      updated_by:
+        description: 更新者
+        type: string
+    type: object
+  opportunity_campaigns.Update:
+    properties:
+      campaign_id:
+        description: 行銷活動ID
+        type: string
+      opportunity_id:
+        description: 商機ID
+        type: string
+      updated_by:
+        description: 更新者
+        type: string
+    required:
+    - updated_by
+    type: object
   order_products.Create:
     properties:
       created_by:
@@ -3921,6 +4032,260 @@ paths:
       summary: 更新單一商機
       tags:
       - opportunity
+  /opportunities/campaigns:
+    get:
+      consumes:
+      - application/json
+      description: 取得全部商機行銷活動
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 目前頁數,請從1開始帶入
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: 一次回傳比數,請從1開始帶入,最高上限20
+        in: query
+        name: limit
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  $ref: '#/definitions/opportunity_campaigns.List'
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 取得全部商機行銷活動
+      tags:
+      - opportunity-campaign
+    post:
+      consumes:
+      - application/json
+      description: 新增商機行銷活動
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 新增商機行銷活動
+        in: body
+        name: '*'
+        required: true
+        schema:
+          $ref: '#/definitions/opportunity_campaigns.Create'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  type: string
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 新增商機行銷活動
+      tags:
+      - opportunity-campaign
+  /opportunities/campaigns/{opportunityCampaignID}:
+    delete:
+      consumes:
+      - application/json
+      description: 刪除單一商機行銷活動
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 商機行銷活動ID
+        in: path
+        name: opportunityCampaignID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  type: string
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 刪除單一商機行銷活動
+      tags:
+      - opportunity-campaign
+    get:
+      consumes:
+      - application/json
+      description: 取得單一商機行銷活動
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 商機行銷活動ID
+        in: path
+        name: opportunityCampaignID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  $ref: '#/definitions/opportunity_campaigns.Single'
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 取得單一商機行銷活動
+      tags:
+      - opportunity-campaign
+    patch:
+      consumes:
+      - application/json
+      description: 更新單一商機行銷活動
+      parameters:
+      - description: JWE Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: 商機行銷活動ID
+        in: path
+        name: opportunityCampaignID
+        required: true
+        type: string
+      - description: 更新商機行銷活動
+        in: body
+        name: '*'
+        required: true
+        schema:
+          $ref: '#/definitions/opportunity_campaigns.Update'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功後返回的值
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.SuccessfulMessage'
+            - properties:
+                body:
+                  type: string
+              type: object
+        "415":
+          description: 必要欄位帶入錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+        "500":
+          description: 伺服器非預期錯誤
+          schema:
+            allOf:
+            - $ref: '#/definitions/code.ErrorMessage'
+            - properties:
+                detailed:
+                  type: string
+              type: object
+      summary: 更新單一商機行銷活動
+      tags:
+      - opportunity-campaign
   /orders:
     get:
       consumes:
